test/corpus/L1/negative/cascade-no-receiver.st
"---
kind: negative
section: error.cascade-no-receiver
codes: E_CASCADE_NO_RECEIVER E_UNEXPECTED_TOKEN
note: cascade semicolon appears before any message send
---"
3 ; foo
